Listado de productos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Gestión de Inventario</title>
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
     <header>
@@ -13,6 +14,9 @@
     </header>
     <main>
         <!-- Contenido de la página -->
+        <a href = "/productos">
+            <p>Ir a productos</p>
+        </a>
     </main>
     <footer>
         <p>© 2024 - Todos los derechos reservados</p>
