--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,29 +10,42 @@
   <div class="container">
     <h1>Buscador de Productos</h1>
 
-    <% if (content === 'add-product-form') %>
-      <%- include('add-product-form.ejs') %>
-  
+    <div class="navigation-buttons">
+      <% if (content === 'search-form') { %>
+        <%- include('search-form.ejs') %>  
+      <% } %>
 
-    <% if (content === 'search-form') { %>
-      <%- include('search-form.ejs') %>  <% } %>
-    <div id="results-container">
-      <% if (typeof productos !== 'undefined' && productos.length > 0) { %>
-        <h2>Resultados de la búsqueda:</h2>
-        <ul>
-          <% productos.forEach(producto => { %>
-            <a href="/producto/<%= producto._id %>">
-              <li>
-                <%= producto.nombre %>: <%= producto.precio %>
-                <form action="/editar" method="GET"> <input type="hidden" name="id" value="<%= producto._id %>"> <button type="submit">Editar</button> </form>
-              </li>
-            </a>
-          <% }); %>
-        </ul>
-      <% } else { %>
-        <p>No hay resultados para mostrar.</p>
+      <% if (content !== 'add-product-form') { %>
+        <a href="/productos/agregar">
+          <button class="add-product-button">Agregar Producto</button>
+        </a>
       <% } %>
     </div>
+
+    <% if (content === 'add-product-form') { %>
+      <%- include('add-product-form.ejs') %>
+    <% } else { %>
+      <div id="results-container">
+        <% if (typeof productos !== 'undefined' && productos.length > 0) { %>
+          <h2>Resultados de la búsqueda:</h2>
+          <ul>
+            <% productos.forEach(producto => { %>
+              <a href="/producto/<%= producto._id %>">
+                <li>
+                  <%= producto.nombre %>: <%= producto.precio %>
+                  <form action="/editar" method="GET"> 
+                    <input type="hidden" name="id" value="<%= producto._id %>"> 
+                    <button type="submit">Editar</button> 
+                  </form>
+                </li>
+              </a>
+            <% }); %>
+          </ul>
+        <% } else { %>
+          <p>No hay resultados para mostrar.</p>
+        <% } %>
+      </div>
+    <% } %>
 
   </div>
 
