Funcionalidad de eliminar producto

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -122,3 +122,16 @@ a:hover {
   align-items: center;
   margin-bottom: 20px;
 }
+
+.delete-form-button {
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.delete-form-button:hover {
+  background-color: darkred;
+}
