--- a/views/product-details.ejs
+++ b/views/product-details.ejs
@@ -14,7 +14,9 @@
       <h2><%= producto.nombre %></h2>
       <p><strong>Descripción:</strong> <%= producto.descripcion %></p>
       <p><strong>Precio:</strong> <%= producto.precio %></p>
-      <p><strong>Tallas:</strong> <%= producto.tallas.join(', ') %></p>
+      <% if (producto.tallas && producto.tallas.length > 0) { %>
+        <p><strong>Tallas:</strong> <%= producto.tallas.join(', ') %></p>
+      <% } %>
       <p><strong>Colores:</strong> <%= producto.colores.join(', ') %></p>
       <p><strong>Cantidad:</strong> <%= producto.cantidad %></p>
       <p><strong>Proveedor:</strong> <%= producto.proveedor.nombre %></p>
