--- a/views/product-details.ejs
+++ b/views/product-details.ejs
@@ -22,17 +22,16 @@
       <p><strong>Proveedor:</strong> <%= producto.proveedor.nombre %></p>
       <p><strong>Contacto del Proveedor:</strong> <%= producto.proveedor.contacto %></p>
       <p><strong>Imágenes:</strong></p>
-      <ul>
-        <% producto.imagenes.forEach(imagen => { %>
-          <li><img src="<%= imagen %>" alt="<%= producto.nombre %>"></li>
-        <% }); %>
-      </ul>
+      
     </div>
 
     <a href="/productos">
       <button class="back-button">Volver al listado</button>
     </a>
-
+    <a href="/stock/<%= producto._id %>">
+      <button class="back-button">Consultar Stock</button>
+    </a>
+    
   </div>
 
 </body>
