añadida funcionalidad bajo stock y filtro

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,9 @@
         <a href = "/productos">
             <p>Ir a productos</p>
         </a>
+        <a href = "/alerta/stock">
+            <p>Bajo stock</p>
+        </a>
     </main>
     <footer>
         <p>© 2024 - Todos los derechos reservados</p>
