--- a/views/search-form.ejs
+++ b/views/search-form.ejs
@@ -1,27 +1,57 @@
-<form id="search-form" action="/productos" method="get">
-  <div class="form-group">
-      <label for="tipo">Tipo de Producto:</label>
-      <select id="tipo" name="tipo">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario de Búsqueda</title>
+  <style>
+    .form-inline {
+      display: inline-block;
+      margin-right: 10px; 
+      justify-content: center;
+    }
+
+    #search-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #search-container .form-group {
+      margin-right: 10px;
+      justify-content: center;
+    }
+  </style>
+</head>
+<body>
+  <div id="search-container">
+    <form id="search-form" action="/productos" method="get">
+      <div class="form-group form-inline">
+        <label for="tipo">Tipo de Producto:</label>
+        <select id="tipo" name="tipo">
           <% tiposDeColeccion.forEach(tipo => { %>
-              <option value="<%= tipo %>" <%= tipo === tipoSeleccionado ? 'selected' : '' %>><%= tipo %></option>
+            <option value="<%= tipo %>" <%= tipo === tipoSeleccionado ? 'selected' : '' %>><%= tipo %></option>
           <% }); %>
-      </select>
-  </div>
-  <div class="form-group">
-      <label for="talla">Talla:</label>
-      <select id="talla" name="talla" required>
+        </select>
+      </div>
+      <div class="form-group form-inline">
+        <label for="talla">Talla:</label>
+        <select id="talla" name="talla" required>
           <% tallasDisponibles.forEach(talla => { %>
-              <option value="<%= talla %>" <%= talla === tallaSeleccionada ? 'selected' : '' %>><%= talla %></option>
+            <option value="<%= talla %>" <%= talla === tallaSeleccionada ? 'selected' : '' %>><%= talla %></option>
           <% }); %>
-      </select>
-  </div>
-  <div class="form-group">
-      <label for="color">Color:</label>
-      <select id="color" name="color" required>
+        </select>
+      </div>
+      <div class="form-group form-inline">
+        <label for="color">Color:</label>
+        <select id="color" name="color" required>
           <% coloresDisponibles.forEach(color => { %>
-              <option value="<%= color %>" <%= color === colorSeleccionado ? 'selected' : '' %>><%= color %></option>
+            <option value="<%= color %>" <%= color === colorSeleccionado ? 'selected' : '' %>><%= color %></option>
           <% }); %>
-      </select>
+        </select>
+      </div>
+      <button type="submit" class="form-inline">Buscar</button>
+    </form>
   </div>
-  <button type="submit">Buscar</button>
-</form>
+</body>
+</html>
