--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -1,17 +1,30 @@
-<!-- stock.ejs -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Disponible:</title>
-
+    <title>Stock Disponible: <%= producto.nombre %></title>
+    <link rel="stylesheet" href="main.css">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
             margin: 0;
+            padding: 0;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            padding: 20px;
+        }
+        header, footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+        }
+        main {
+            flex-grow: 1;
             padding: 20px;
         }
         h2 {
@@ -20,6 +33,8 @@
         }
         table {
             width: 100%;
+            max-width: 800px; /* Ajusta este valor según tus necesidades */
+            margin: 0 auto; /* Centra la tabla horizontalmente */
             border-collapse: collapse;
             border-radius: 8px;
             overflow: hidden;
@@ -40,40 +55,90 @@
         tr:hover {
             background-color: #f2f2f2;
         }
+        .btn-aumentar {
+            background-color: #28a745; /* Color verde para el botón de aumentar */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 8px 12px;
+            cursor: pointer;
+        }
+        .btn-reducir {
+            background-color: #dc3545; /* Color rojo para el botón de reducir */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 8px 12px;
+            cursor: pointer;
+        }
+        .btn-aumentar:hover,
+        .btn-reducir:hover {
+            opacity: 0.8; /* Cambia la opacidad al pasar el ratón */
+        }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        .back-button {
+            background-color: #007BFF; /* Color azul para el botón de volver */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 8px 12px;
+            cursor: pointer;
+        }
+        .back-button:hover {
+            background-color: #0056b3; /* Color azul más oscuro al pasar el ratón */
+        }
     </style>
 </head>
 <body>
-    <h2>Stock Disponible:  <%= producto.nombre %></h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Talla</th>
-                <th>Color</th>
-                <th>Stock</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% Object.keys(stock).forEach(talla => { %>
-                <% Object.keys(stock[talla]).forEach(color => { %>
-                    <tr>
-                        <td><%= talla %></td>
-                        <td><%= color %></td>
-                        <td><%= stock[talla][color] %></td>
-                        <td>
-                            <a href="/aumentarStock?producto=<%= idProducto %>&talla=<%= talla %>&color=<%= color %>" >
-                                <button class = "btn">Aumentar</button>
-                            </a>
-                        </td>
-                        <td>
-                            <a href="/reducirStock?producto=<%= idProducto %>&talla=<%= talla %>&color=<%= color %>" >
-                                <button class = "btn">Reducir</button>
-                            </a>
-
-                        </td>
-                    </tr>
+    <header>
+        <h2>Stock Disponible: <%= producto.nombre %></h2>
+    </header>
+    <div class="container">
+    </br>
+        <table>
+            <thead>
+                <tr>
+                    <th>Talla</th>
+                    <th>Color</th>
+                    <th>Stock</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <% Object.keys(stock).forEach(talla => { %>
+                    <% Object.keys(stock[talla]).forEach(color => { %>
+                        <tr>
+                            <td><%= talla %></td>
+                            <td><%= color %></td>
+                            <td><%= stock[talla][color] %></td>
+                            <td>
+                                <a href="/aumentarStock?producto=<%= idProducto %>&talla=<%= talla %>&color=<%= color %>" >
+                                    <button class="btn-aumentar">Aumentar</button>
+                                </a>
+                            </td>
+                            <td>
+                                <a href="/reducirStock?producto=<%= idProducto %>&talla=<%= talla %>&color=<%= color %>" >
+                                    <button class="btn-reducir">Reducir</button>
+                                </a>
+                            </td>
+                        </tr>
+                    <% }); %>
                 <% }); %>
-            <% }); %>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+        <div class="button-container">
+            <a href="/productos">
+                <button class="back-button">Volver al listado</button>
+            </a>
+        </div>
+    </div>
+    <footer>
+        <p>© 2024 - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
