--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -41,7 +41,7 @@
       gap: 20px;
       margin-bottom: 20px;
     }
-    .add-product-button, .delete-form-button, .edit-button {
+    .add-product-button, .delete-form-button, .edit-button, .back-button {
       display: inline-block;
       padding: 10px 20px;
       font-size: 14px;
@@ -54,7 +54,7 @@
       cursor: pointer;
       width: 100%;
     }
-    .add-product-button:hover, .delete-form-button:hover, .edit-button:hover {
+    .add-product-button:hover, .delete-form-button:hover, .edit-button:hover, .back-button:hover {
       background-color: #0056b3;
     }
     #results-container ul {
@@ -90,7 +90,6 @@
     </header>
   <% } %>
 
-  
   <div class="container">
     <div class="navigation-buttons">
       <% if (content === 'search-form') { %>
@@ -131,6 +130,11 @@
         <% } %>
       </div>
     <% } %>
+    
+    </br>
+    <a href="/">
+      <button class="back-button">Volver a la página principal</button>
+    </a>
   </div>
   <footer>
     <p>© 2024 - Todos los derechos reservados</p>
